styles/pages/_Error.scss
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap');

/* Styles for ApiError Page. */
.crying-husky-2 {
  width: 260px !important;
  height: auto !important;
  position: absolute;
  right: 10px;
  bottom: -40px;
  z-index: 102;

  @media only screen and (min-width: 0px) {
    // Screen too small to display
    width: 0% !important;
  }

  @media only screen and (min-width: 200px) {
    width: 45% !important;
    right: 0px;
    bottom: -10px;
  }

  @media only screen and (min-width: 600px) {
    width: 45% !important;
  }

  @media only screen and (min-width: 1000px) {
    width: 25% !important;
    right: -10px;
  }

  @media only screen and (min-width: 1100px) {
    width: 30% !important;
  }

  @media only screen and (min-width: 1200px) {
    width: 40% !important;
  }

  @media only screen and (min-width: 1400px) {
    width: 30% !important;
  }
}

.api-error-title-text {
  font-family: Montserrat Alternates;
  color: #e63946;
  font-size: 100px;
  font-weight: 700;
  line-height: 100px;

  @media only screen and (max-width: 800px) {
    font-size: 70px;
    line-height: 80px;
  }
}

.api-error-sub-title-text {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 600;
  font-size: 50px;
  line-height: 50px;
  color: #2a426b;
  margin-bottom: 40px;

  @media only screen and (max-width: 800px) {
    font-size: 30px;
    line-height: 35px;
    margin-bottom: 20px;
  }
}

.api-error-text {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 500;
  font-size: 36px;
  line-height: 43px;
  color: #2a426b;
  margin-bottom: 20px;
  @media only screen and (max-width: 800px) {
    font-size: 30px;
    line-height: 35px;
  }
}

.suport-button {
  box-sizing: border-box;
  padding: 10px 30px;
  background: #e63946;
  border: 1px solid #e63946;
  border-radius: 28px;

  // Inner text
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;

  cursor: pointer;
  color: #ffffff;

  flex: none;
  order: 0;
  flex-grow: 0;

  @media only screen and (max-width: 800px) {
    font-weight: 700;
    font-size: 18px;
    line-height: 22px;
  }
}

.suport-button:hover {
  background: #b82e38;
  border: 1px solid #b82e38;
}

.suport-button:active {
  background: #8a222a;
  border: 1px solid #8a222a;
}

.create-issue {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 20px;
  color: #1d3557;
  margin-left: 40px;

  @media only screen and (max-width: 800px) {
    margin-left: 0px;
    margin-top: 10px;
    display: block;
  }
}

.create-issue:hover {
  text-decoration-line: underline;
  color: #1d3557;
}

.request-container {
  display: inline-flex;
  align-items: center;
}

